# dark_souls_remastered_practice_tool

./: .env  Cargo.toml  README.md  TODO  dark_souls_remastered_tool.toml  other  pointers_difference.txt
lib/libdsr/: Cargo.toml  base_addresses.rs
lib/libdsr/src/: lib.rs  memedit.rs  pointers.rs  version.rs
lib/libdsr/src/codegen/: base_addresses.rs
src/: base_addresses.rs  inject.rs  lib.rs  main.rs  pointers.rs
tool/: Cargo.toml
tool/src/: base_addresses.rs  config.rs  inject.rs  lib.rs  main.rs  pointers.rs  tool.rs
tool/src/others/: mod.rs
tool/src/widgets/: character_stats.rs  cycle_speed.rs  flag.rs  mod.rs  nudge_pos.rs  open_menu.rs  position.rs  savefile_manager.rs  souls.rs  warp_menu.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/codegen/: aob_scans.rs  changes.md  codegen.rs  mod.rs  params.rs
