[package]
name = "resident_evil_1_trainer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "resident_evil_1_trainer"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "resident_evil_1_trainer_tool"

[dependencies]
once_cell = "1.19.0"

[dependencies.windows]
version = "0.54.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory"
    "Win32_System_SystemServices",
]

