[workspace]
resolver = "2"
members = ["tool"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
once_cell = "1.19.0"
imgui = "0.12"
hudhook = { version = "0.7.0", features = ["dx9", "inject"], default-features = false }

[workspace.dependencies.windows]
version = "0.54.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
]

