[workspace]
resolver = "2"
members = ["tool", "xtask"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
once_cell = "1.19.0"
imgui = "0.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
hudhook = { version = "0.7.0", features = ["dx11", "inject"], default-features = false }
practice-tool-core = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }
practice-tool-tasks = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }

[workspace.dependencies.windows]
version = "0.54.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
]

