[package]
name = "resident_evil_trainer"
version.workspace = true
edition = "2021"

[[bin]]
name = "dark_souls_remastered_tool_libraries"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dark_souls_remastered_tool"


[dependencies]
tracing-subscriber = "0.3.17"
hudhook.workspace = true
imgui.workspace = true
once_cell.workspace = true
windows.workspace = true
