[package]
name = "dark_souls_remastered_tool"
version.workspace = true
edition = "2021"

[[bin]]
name = "dark_souls_remastered_tool"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dark_souls_remastered_tool_binaries"


[dependencies]
tracing-subscriber = "0.3.17"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
toml = "0.5.6"

libdsr = { path = "../lib/libdsr" }

serde.workspace = true
serde_json.workspace = true
hudhook.workspace = true
imgui.workspace = true
once_cell.workspace = true
windows.workspace = true
practice-tool-core.workspace = true
